--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -1,3 +1,13 @@
+/*collapsible*/
+.indivudual-person {
+    
+}
+
+.information {
+
+}
+
+/*about the team page*/
 #project-team {
     list-style: none;
     margin: 15px;
@@ -16,6 +26,8 @@
     padding: 2px 2px;
 }
 
+
+/*navbar css*/
 #nav {
     width: 100%;
     float: left;
