--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -1,11 +1,21 @@
 /*collapsible*/
 .Collapsible__trigger {
     cursor: pointer;
-    color: green;
+    background-color: #777;
+    color: white;
+    padding: 12px;
+    width: 25%;
+    border: none;
+    text-align: middle;
+    outline: none;
+    font-size: 15px;
+    font-weight: bold;
+    margin-top: 1px;
+    margin-bottom: 100px;
 }
 
 .Collapsible__contentInner {
-    color:
+   padding: 18px;
 }
 
 /*about the team page*/
