--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -1,4 +1,5 @@
 /*collapsible*/
+
 .Collapsible__trigger {
     cursor: pointer;
     background-color: #777;
@@ -10,8 +11,8 @@
     outline: none;
     font-size: 15px;
     font-weight: bold;
-    margin-top: 1px;
-    margin-bottom: 100px;
+    /*okay the buttons r so close together i tried margin it didnt work omg help*/
+
 }
 
 .Collapsible__contentInner {
