--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -12,6 +12,7 @@
     font-size: 15px;
     font-weight: bold;
     position: relative;
+    margin-top: 8px;
     margin-left: auto;
     margin-right: auto;
     display: block;
@@ -38,6 +39,7 @@
     list-style: none;
     margin: 15px;
     padding: 15px;
+    text-align: center;
 }
 
 #contact-info {
