--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -16,6 +16,7 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
+    content: '\02795';
 }
 
 .Collapsible__contentInner {
@@ -27,6 +28,7 @@
    margin-left: auto;
    margin-right: auto;
    overflow: auto;
+   background-color: #ebebeb;
 
 }
 
