--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -61,22 +61,27 @@
 
 /*navbar css*/
 #nav {
-    width: 100%;
-    float: left;
-    margin: 0 0 3em 0;
-    padding: 0;
-    list-style: none;
+  margin-right: 0px;
+  margin-left: 170px;
+  margin-top:40px;
+  width: 48%;
+  padding-right: 0px;
+  float:left;
 }
-
 #nav li {
-    float: left;
+  display:inline;
+  float:left;
+  padding:0 20px 0 20px;
 }
-
 #nav li a {
-    display: block;
-    padding: 8px 15px;
-    text-decoration: none;
-    font-weight: bold;
-    color: #069;
-    border-right: 1px solid #ccc;
+  color:#fff;
+  text-decoration:none;
+  text-transform:uppercase;
+  font-size:16px;
+}
+#nav .current a{
+	color:red;
+}
+#nav a:hover{
+	color:red;
 }
