--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -69,9 +69,8 @@
 /*navbar css*/
 #nav {
     width: 100%;
-    float: left;
-    margin: 0 0 3em 0;
-    padding: 0;
+    margin: 0 0 3em 160px;
+    padding-bottom: 20px;
     list-style: none;
 }
 
@@ -79,7 +78,7 @@
   display:inline;
   color: red;
   float:left;
-  padding:0 20px 0 20px;
+  padding:0 18px 0 18px;
   float: left;
 }
 
@@ -89,5 +88,4 @@
     text-decoration: none;
     font-weight: bold;
     color: #069;
-    border-right: 1px solid #ccc;
 }
