--- a/family-tree-project/family-tree/src/pages/loginpage.css
+++ b/family-tree-project/family-tree/src/pages/loginpage.css
@@ -12,7 +12,8 @@ font-weight: bolder;
 }
 
 .login-form{
-  background:#292828;
+  background:#030529;
+  border-radius: 25px;
   width:100%;
   max-width: 500px;
   height:100%;
@@ -21,12 +22,15 @@ font-weight: bolder;
   color:white;
 }
 
+
+
 .input-box input{
   width:440px;
   margin: 5px auto;
   border-bottom: 2px solid #000;
-  padding-bottom: 5px;
+  padding-bottom: 10px;
   padding-top: 10px;
+  padding-left: 12px;
   color:black;
 }
 .text{
