--- a/family-tree-project/family-tree/src/pages/RCname.css
+++ b/family-tree-project/family-tree/src/pages/RCname.css
@@ -1,6 +1,7 @@
 *{
   margin: 0;
   padding: 0;
+  color: black;
 }
 
 body{
@@ -9,19 +10,27 @@ body{
 
 h1{
   text-align: center;
-  padding: 20px;
+  padding-top: 10px;
+  padding-bottom:10px;
+  padding-left:0px;
+  padding-right:0px;
   font-size: 50px;
 }
 
-.register{
+.container{
   background: none;
-  width: 500px;
   margin: auto;
-  color: black;
-  font-size: 18px;
-  padding: 20px;
-  border-radius: 10px;
   text-align: center;
+}
+
+#register{
+  background: none;
+  border: 5px solid;
+  border-radius: 40px;
+  padding-left:5px;
+  padding-right:5px;
+  padding-top:10px;
+  padding-bottom:10px;
 }
 
 label{
@@ -31,27 +40,106 @@ label{
   font-style: normal;
 }
 
-#name{
+#Fname{
   width: 200px;
   height: 15px;
-  border: none;
-  border-radius: 3px;
   outline: 0;
-  padding: 10px;
+  border: 1.5px solid;
+  border-radius: 7px;
+  padding-top: 18px;
+  padding-bottom:18px;
+  padding-left:7px;
+  padding-right:20px;
 }
 
-#phone{
-  width: 50px;
-  padding: 3px;
-  border-radius: 2px;
+#Mname{
+  width: 200px;
+  height: 15px;
+  border: 1.5px solid;
+  border-radius: 7px;
+  outline: 0;
+  padding-top: 18px;
+  padding-bottom:18px;
+  padding-left:7px;
+  padding-right:20px;
+  margin-left: 15px;
+}
+
+#Lname{
+  width: 200px;
+  height: 15px;
+  border: 1.5px solid;
+  border-radius: 7px;
+  outline: 0;
+  padding-top: 18px;
+  padding-bottom:18px;
+  padding-left:7px;
+  padding-right:20px;
+  margin-left: 15px;
+}
+
+#dob{
+  width: 200px;
+  border: 1.5px solid;
+  border-radius: 7px;
+  padding-top: 10px;
+  padding-bottom:10px;
+  padding-left:7px;
+  padding-right:10px;
 }
 
 #Mnum{
-  width: 160px;
-  padding: 3px;
+  width: 200px;
+  border: 1.5px solid;
+  border-radius: 7px;
+  padding-top: 10px;
+  padding-bottom:10px;
+  padding-left:7px;
+  padding-right:10px;
 }
 
+#phone{
+  border: 1.5px solid;
+  border-radius: 7px;
+  padding-top: 10px;
+  padding-bottom:10px;
+  padding-left:3px;
+  padding-right:3px;
+}
+
+#email{
+  width: 200px;
+  border: 1.5px solid;
+  border-radius: 7px;
+  padding-top: 10px;
+  padding-bottom:10px;
+  padding-left:7px;
+  padding-right:10px;
+}
+
+#password{
+  width: 200px;
+  border: 1.5px solid;
+  border-radius: 7px;
+  padding-top: 10px;
+  padding-bottom:10px;
+  padding-left:7px;
+  padding-right:10px;
+}
+
+#Rpassword{
+  width: 200px;
+  border: 1.5px solid;
+  border-radius: 7px;
+  padding-top: 10px;
+  padding-bottom:10px;
+  padding-left:7px;
+  padding-right:10px;
+}
+
+
 .gender{
+  width: 200px;
   color: white;
 }
 
