--- a/family-tree-project/family-tree/src/pages/RCName.css
+++ b/family-tree-project/family-tree/src/pages/RCName.css
@@ -1,43 +1,53 @@
 *{
   margin: 0;
   padding: 0;
-  color: black;
 }
 
-body{
-  background-repeat: no-repeat;
-}
 
-h1{
-  text-align: center;
-  padding-top: 10px;
-  padding-bottom:10px;
-  padding-left:0px;
-  padding-right:0px;
-  font-size: 50px;
-}
+/*-------GLOBAL--------*/
 
-.container{
-  background: none;
+.box{
+  background: #f4f4f4;
   margin: auto;
-  text-align: center;
+  text-align: left;
+  padding-left: 80px;
+  padding-right: 80px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 #register{
-  background: none;
+  background: #354248;
   border: 5px solid;
   border-radius: 40px;
-  padding-left:5px;
-  padding-right:5px;
-  padding-top:10px;
-  padding-bottom:10px;
 }
 
-label{
-  color: black;
+
+#register h1{
+  text-align: center;
+  color: white;
+  padding-top: 35px;
+  padding-bottom:10px;
+  padding-left:0px;
+  padding-right:0px;
+  font-size: 55px;
+  font-weight: bold;
+  font-style: italic;
+}
+
+#register label{
+  color: white;
   font-family: sans-serif;
   font-size: 18px;
+  font-weight:bolder;
   font-style: normal;
+}
+
+
+/*-------NAME--------*/
+
+.name{
+padding-left: 15px;
 }
 
 #Fname{
@@ -78,6 +88,13 @@ label{
   margin-left: 15px;
 }
 
+
+/*-------DOB--------*/
+
+.DOB{
+padding-left: 15px;
+}
+
 #dob{
   width: 200px;
   border: 1.5px solid;
@@ -86,6 +103,13 @@ label{
   padding-bottom:10px;
   padding-left:7px;
   padding-right:10px;
+}
+
+
+/*-------MOBILE NUMBER--------*/
+
+.number{
+padding-left: 15px;
 }
 
 #Mnum{
@@ -107,6 +131,14 @@ label{
   padding-right:3px;
 }
 
+
+
+/*-------EMAIL--------*/
+
+.Email{
+padding-left: 15px;
+}
+
 #email{
   width: 200px;
   border: 1.5px solid;
@@ -115,6 +147,14 @@ label{
   padding-bottom:10px;
   padding-left:7px;
   padding-right:10px;
+}
+
+
+
+/*-------PASSWORD--------*/
+
+.Password{
+padding-left: 15px;
 }
 
 #password{
@@ -138,17 +178,41 @@ label{
 }
 
 
+
+/*-------GENDER--------*/
+
+#Gender{
+padding-left: 18px;
+}
+
+.Gender{
+padding-bottom: 10px;
+}
+
+
+
 .gender{
   width: 200px;
   color: white;
 }
 
+
+/*-------SUBMIT BUTTON--------*/
+
+.Submit{
+  padding-left: 355px;
+}
+
 .submit{
   width: 200px;
-  padding: 7px;
   font-size: 15px;
   font-family: sans-serif;
   font-weight: 600;
-  border: none;
-  border-radius: 3px;
+  border-radius: 10px;
+  padding-top: 7px;
+  padding-bottom: 7px;
+  padding-right: 7px;
+  padding-left: 7px;
+  margin-bottom: 30px;
+  margin-top: 40px;
 }
