--- a/family-tree-project/family-tree/src/pages/RCName.css
+++ b/family-tree-project/family-tree/src/pages/RCName.css
@@ -7,7 +7,7 @@
 /*-------GLOBAL--------*/
 
 .box{
-  background: #f4f4f4;
+  background: white;
   margin: auto;
   text-align: left;
   padding-left: 80px;
