--- a/family-tree-project/family-tree/src/pages/Homepage.css
+++ b/family-tree-project/family-tree/src/pages/Homepage.css
@@ -35,11 +35,13 @@ header{
 	float: right;
 	margin-top: 19px;
 	margin-right:30px;
+	padding-top: 15px;
 
 }
 header #branding{
 	float:left ;
 	padding-bottom: 0px;
+	padding-top: 15px;
 	margin-left: 270px;
 }
 header #branding h1{
