--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -69,8 +69,9 @@
 /*navbar css*/
 #nav {
     width: 100%;
-    margin: 0 0 3em 80px;
+    margin: 0 0 3em 0px;
     padding-bottom: 20px;
+    padding-top: 22px;
     list-style: none;
 }
 
@@ -78,7 +79,7 @@
   display:inline;
   color: red;
   float:left;
-  padding:0 18px 0 18px;
+  padding:0 17px 0 17px;
   float: left;
 }
 
