--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -1,5 +1,8 @@
 /*historicalpages css*/
-
+.p1{
+  width: 50px;
+  height: 50px;
+}
 
 /*collapsible*/
 
@@ -19,7 +22,6 @@
     margin-left: auto;
     margin-right: auto;
     display: block;
-    content: '\02795';
 }
 
 
