--- a/family-tree-project/family-tree/src/pages/Mcontent.css
+++ b/family-tree-project/family-tree/src/pages/Mcontent.css
@@ -6,7 +6,7 @@
 
 /*-------GLOBAL--------*/
 
-.box{
+.box1{
   background: white;
   margin: auto;
   text-align: left;
@@ -18,14 +18,14 @@
   height: 60%;
 }
 
-#register{
+#editprofile{
   background: #354248;
   border: 5px solid;
   border-radius: 40px;
 }
 
 
-#register h1{
+#editprofile h1{
   text-align: center;
   color: white;
   padding-top: 35px;
@@ -37,7 +37,7 @@
   font-style: italic;
 }
 
-#register label{
+#editprofile label{
   color: white;
   font-family: sans-serif;
   font-size: 18px;
@@ -48,11 +48,11 @@
 
 /*-------NAME--------*/
 
-.name{
+.name1{
 padding-left: 15px;
 }
 
-#Fname{
+#Fname1{
   width: 200px;
   height: 15px;
   outline: 0;
@@ -65,7 +65,7 @@ padding-left: 15px;
 
 }
 
-#Mname{
+#Mname1{
   width: 200px;
   height: 15px;
   border: 1.5px solid;
@@ -78,7 +78,7 @@ padding-left: 15px;
 
 }
 
-#Lname{
+#Lname1{
   width: 200px;
   height: 15px;
   border: 1.5px solid;
@@ -88,17 +88,17 @@ padding-left: 15px;
   padding-bottom:18px;
   padding-left:7px;
   padding-right:20px;
-  
+
 }
 
 
 /*-------DOB--------*/
 
-.DOB{
+.DOB1{
 padding-left: 15px;
 }
 
-#dob{
+#dob1{
   width: 200px;
   border: 1.5px solid;
   border-radius: 7px;
@@ -111,11 +111,11 @@ padding-left: 15px;
 
 /*-------MOBILE NUMBER--------*/
 
-.number{
+.number1{
 padding-left: 15px;
 }
 
-#Mnum{
+#Mnum1{
   width: 200px;
   border: 1.5px solid;
   border-radius: 7px;
@@ -125,7 +125,7 @@ padding-left: 15px;
   padding-right:10px;
 }
 
-#phone{
+#phone1{
   border: 1.5px solid;
   border-radius: 7px;
   padding-top: 10px;
@@ -138,11 +138,11 @@ padding-left: 15px;
 
 /*-------EMAIL--------*/
 
-.Email{
+.Email1{
 padding-left: 15px;
 }
 
-#email{
+#email1{
   width: 200px;
   border: 1.5px solid;
   border-radius: 7px;
@@ -156,11 +156,11 @@ padding-left: 15px;
 
 /*-------PASSWORD--------*/
 
-.Password{
+.Password1{
 padding-left: 15px;
 }
 
-#password{
+#password1{
   width: 200px;
   border: 1.5px solid;
   border-radius: 7px;
@@ -170,7 +170,7 @@ padding-left: 15px;
   padding-right:10px;
 }
 
-#Rpassword{
+#Rpassword1{
   width: 200px;
   border: 1.5px solid;
   border-radius: 7px;
@@ -184,17 +184,17 @@ padding-left: 15px;
 
 /*-------GENDER--------*/
 
-#Gender{
+#Gender1{
 padding-left: 18px;
 }
 
-.Gender{
+.Gender1{
 padding-bottom: 10px;
 }
 
 
 
-.gender{
+.gender1{
   width: 200px;
   color: white;
 }
@@ -202,11 +202,11 @@ padding-bottom: 10px;
 
 /*-------SUBMIT BUTTON--------*/
 
-.Submit{
+.Submit1{
   padding-left: 355px;
 }
 
-.submit{
+.submit1{
   width: 200px;
   font-size: 15px;
   font-family: sans-serif;
