--- a/family-tree-project/family-tree/src/pages/profiledd.css
+++ b/family-tree-project/family-tree/src/pages/profiledd.css
@@ -1,39 +1,40 @@
+.dropdown {
+  width: 200px;
+  float: right;
+  position: relative;
+  padding-top: 20px;
+
+}
+
 .container {
   position: relative;
   display: inline-block;
-  
-}
-.button {
-  padding: 0;
-  width: 50px;
-  border: 0;
-  background-color: #fff;
-  color: #333;
-  cursor: pointer;
-  outline: 0;
-  font-size: 40px;
 }
 
-.dropdown {
-  position: absolute;
-  top: 100%;
-  left: 0;
-  width: 300px;
-  z-index: 2;
-  border: 1px solid rgba(0, 0, 0, 0.04);
-  box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.14);
+#list{
+    width: 150px;
+    background-color: #fff;
+}
+
+.button {
+  width: 50px;
+  background-color: #354248;
+  color: #333;
+  cursor: pointer;
+  font-size: 40px;
+  padding-right: 120px;
 }
 
 ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
+    list-style:  none;
 }
+
 li {
-  padding: 8px 12px;
+  padding: 8px 12px 8px 0px ;
+  color: black;
 }
 
 li:hover {
-  background-color: rgba(0, 0, 0, 0.14);
+  background-color: rgba(0, 0, 0, 0.2);
   cursor: pointer;
 }
