fixed website position

--- a/family-tree-project/family-tree/src/pages/Homepage/Homepage.css
+++ b/family-tree-project/family-tree/src/pages/Homepage/Homepage.css
@@ -13,17 +13,20 @@ body{
 	margin:auto;
 	overflow:hidden;
 }
+
 ul{
 	padding:0;
 	margin:0;
 }
+
 a{
 	text-decoration: none;
 }
 
 
 
-/* Header */
+/***** Header *****/
+
 header{
 	background:#354248;
 	color:#ffffff;
