--- a/family-tree-project/family-tree/src/pages/Homepage/Homepage.css
+++ b/family-tree-project/family-tree/src/pages/Homepage/Homepage.css
@@ -1,8 +1,6 @@
 body{
 	font-family: sans-serif;
 	font-size: 15px;
-	padding:0;
-	margin:0;
 	background-color:#f4f4f4;
 }
 
@@ -11,7 +9,7 @@ body{
 .container {
 	width:100%;
 	margin:auto;
-	overflow:hidden;
+	overflow:hidden
 }
 
 ul{
