--- a/family-tree-project/family-tree/src/components/profiledd.css
+++ b/family-tree-project/family-tree/src/components/profiledd.css
@@ -6,15 +6,14 @@
 
 }
 
-<<<<<<< Updated upstream
 .containerprofile {
   position: relative;
-=======
+
+}
 .container1{
   position: relative;
   display: inline-block;
 
->>>>>>> Stashed changes
 }
 
 #list{
