--- a/family-tree-project/family-tree/src/pages/Homepage/Homepage.css
+++ b/family-tree-project/family-tree/src/pages/Homepage/Homepage.css
@@ -35,7 +35,7 @@ header{
 	color:#ffffff;
 	padding-top:30px;
 	min-height:60px;
-	border-bottom:#e8491d 3px solid;
+	border-bottom:black 1.5px solid;
 }
 .profile {
 	float: right;
