--- a/family-tree-project/family-tree/src/pages/Profile-Page/Profile.css
+++ b/family-tree-project/family-tree/src/pages/Profile-Page/Profile.css
@@ -6,21 +6,18 @@
 
 /*-------GLOBAL--------*/
 
-.boxprofile{
-  background: #277ef9;
-  margin: auto;
-
-  width: 100%;
-  height: 100%;
-  padding: 20px;
-}
-
 #editprofile{
   background: #277ef9;
   text-align: left;
-
+  margin: auto;
+  width: 1110px;
+  height: 1200px;
+  padding: 0px;
+  border-top: 1.5px solid;
+  border-right: 3px solid;
+  border-bottom: 3px solid;
+  border-left: 3px solid;
 }
-
 
 #editprofile h1{
   text-align: left;
@@ -29,6 +26,7 @@
   padding-bottom:10px;
   padding-left:15px;
   padding-right:0px;
+  margin-top: 0px;
   font-size: 55px;
   font-weight: bold;
   font-style: italic;
@@ -41,9 +39,13 @@
   font-size: 18px;
   font-weight:bolder;
   font-style: normal;
-
 }
 
+.profileHeader{
+    margin-top: 0px;
+    padding-top: 0px;
+
+}
 
 /*-------NAME--------*/
 
