--- a/family-tree-project/family-tree/src/components/Profile-DropDown-Component/profiledd.css
+++ b/family-tree-project/family-tree/src/components/Profile-DropDown-Component/profiledd.css
@@ -29,6 +29,12 @@
   border: 0px;
 }
 
+.button:hover{
+    background-color: rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+
+}
+
 .ddimage{
     float: right;
     padding-right: 7px;
