--- a/family-tree-project/family-tree/src/pages/Profile-Page/Profile.css
+++ b/family-tree-project/family-tree/src/pages/Profile-Page/Profile.css
@@ -6,9 +6,8 @@
 
 /*-------GLOBAL--------*/
 
-#editprofile{
-  background: #277ef9;
-  text-align: left;
+#Profile{
+  background: white;
   margin: auto;
   width: 1110px;
   height: 1200px;
@@ -19,38 +18,56 @@
   border-left: 3px solid;
 }
 
-#editprofile h1{
-  text-align: left;
-  color: black;
-  padding-top: 35px;
-  padding-bottom:10px;
-  padding-left:15px;
-  padding-right:0px;
-  margin-top: 0px;
-  font-size: 55px;
-  font-weight: bold;
-  font-style: italic;
-  background: white;
+.profileinfo {
+
 }
 
-#editprofile label{
-  color: #ffffff;
-  font-family: sans-serif;
-  font-size: 18px;
-  font-weight:bolder;
-  font-style: normal;
-}
-
-.profileHeader{
+.profileinfo h1{
+    color: black;
+    padding-top: 20px;
+    padding-bottom:20px;
+    padding-left:15px;
+    padding-right:0px;
     margin-top: 0px;
-    padding-top: 0px;
-
+    font-size: 55px;
+    font-weight: bold;
+    font-style: italic;
+    background: #adadad;
 }
 
+.profileinfo1{
+    float: right;
+    margin-top: 40px;
+    margin-left: 100px;
+    padding-left: 10px;
+    padding-bottom: 20px;
+}
+
+
+
+.profileinfomyf{
+    float: right;
+    padding-left: 10px;
+}
+
+.profileinfomyp{
+    float: left;
+    border-right: 1px solid;
+    height: 35px;
+}
 /*-------NAME--------*/
 
-.nameprofile{
-padding-left: 15px;
+.nameprofile label{
+    padding-left: 250px;
+
+}
+
+.fathernameprofile label{
+    padding-left: 250px;
+}
+
+.mothernameprofile label{
+    padding-left: 250px;
 }
 
 #Fnameprofile{
@@ -62,6 +79,8 @@ padding-left: 15px;
   padding-bottom:18px;
   padding-left:7px;
   padding-right:20px;
+  margin-left: 250px;
+
 
 }
 
@@ -93,7 +112,7 @@ padding-left: 15px;
 /*-------DOB--------*/
 
 .DOBprofile{
-padding-left: 15px;
+padding-left: 250px;
 }
 
 #dobprofile{
@@ -109,7 +128,7 @@ padding-left: 15px;
 /*-------MOBILE NUMBER--------*/
 
 .numberprofile{
-padding-left: 15px;
+padding-left: 250px;
 
 }
 
@@ -144,7 +163,7 @@ padding-left: 15px;
 /*-------EMAIL--------*/
 
 .Emailprofile{
-padding-left: 15px;
+padding-left: 250px;
 }
 
 #emailprofile{
@@ -199,24 +218,4 @@ padding-bottom: 10px;
 .genderprofile{
   width: 200px;
   color: white;
-}
-
-
-/*-------SUBMIT BUTTON--------*/
-
-.Submitprofile{
-  padding-left: 200px;
-}
-
-.submitprofile{
-  width: 200px;
-  font-size: 15px;
-  font-family: sans-serif;
-  font-weight: 600;
-  padding-top: 7px;
-  padding-bottom: 7px;
-  padding-right: 7px;
-  padding-left: 7px;
-  margin-bottom: 30px;
-  margin-top: 40px;
 }
