--- a/family-tree-project/family-tree/src/pages/Profile-Page/Profile.css
+++ b/family-tree-project/family-tree/src/pages/Profile-Page/Profile.css
@@ -9,8 +9,8 @@
 #Profile{
   background:#7abef6;
   margin: auto;
-  width: 1110px;
-  height: 100%px;
+  width: 100%;
+  height: 100%;
   padding: 0px;
   border-top: 1.5px solid;
   border-right: 3px solid;
