--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -30,7 +30,6 @@
    margin-right: auto;
    overflow: auto;
    background-color: #ebebeb;
-   vertical-align: middle;
 }
 
 .Collapsible__contentOuter {
@@ -49,6 +48,31 @@
     list-style: none;
     margin: 10px 20px;
     padding: 10px 10px;
+    text-align: center;  
+}
+
+#feedback-form {
+    width: 100%;
+    background-color: #f2f2f2;
+    color: black;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    
+}
+
+#F-name #F-email #F-Topic {
+    height: 50px ;
+}
+
+#F-description {
+    height: 210px ;
+    width: 800px;
+    display: inline-block;
+    word-break: break-word;
+    padding: 10px;
 }
 
 
@@ -89,4 +113,3 @@
 	color:red;
 }
 
-/*historicalplacestwo css*/
