--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -44,6 +44,7 @@
     text-align: center;
 }
 
+/* contact page */
 #contact-info {
     list-style: none;
     margin: 10px 20px;
@@ -75,6 +76,13 @@
     padding: 10px;
 }
 
+#F-submit {
+    padding: 7px;
+    margin: 50;
+    background: #354248;
+    color: white;
+    border: none;
+}
 
 #go-back {
     list-style: none;
