--- a/family-tree-project/family-tree/src/pages/pages.css
+++ b/family-tree-project/family-tree/src/pages/pages.css
@@ -56,8 +56,8 @@
     width: 100%;
     background-color: #f2f2f2;
     color: black;
-    padding: 14px 20px;
-    margin: 8px 0;
+    padding: 14px 40px;
+    margin: 10px 0;
     border: none;
     border-radius: 4px;
     cursor: pointer;
@@ -66,12 +66,21 @@
 
 #F-name #F-email #F-Topic {
     height: 50px ;
+    padding: 10px;
 }
+
+#labelsport {
+    display: block;
+    padding: 10px;
+    margin: 10px;
+}
+
 
 #F-description {
     height: 210px ;
     width: 800px;
-    display: inline-block;
+    display: block;
+    overflow-wrap: normal;
     word-break: break-word;
     padding: 10px;
 }
